# VoxelEnigen

./: .gitignore  CMakeLists.txt  README.md  run.bat
backend/: server.py
backend/static/: index.html
src/: block.h  chunk.cpp  chunk.h  main.cpp  player.cpp  player.h  texture_atlas.cpp  texture_atlas.h  world.cpp  world.h
